fix inventories list overflowing on mobile

--- a/src/public/style.css
+++ b/src/public/style.css
@@ -387,7 +387,7 @@ h2.sectionTitle {
 	overflow: hidden;
 	border-radius: 1em;
 	max-width: max-content;
-	width: 40em;
+	width: min(40em, 100%);
 }
 .inventory-tab {
 	background-color: var(--theme-lighter-background);
